--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" type="text/css" rel="stylesheet" />
-
     <title>Document</title>
 </head>
 <body>
-    <!-- <div id="example"></div> -->
-    <!-- <div id="example2"></div> -->
-    <div id="parent">
-        <div id="child1"></div>
-        <div id="child2"></div>  
-      </div>
+    <script src="main.js"></script>
 
 </body>
 </html>
